# mpsc-channel-in-cxx

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  mpsc_channel.hpp  vcpkg.json
cmake/ports/mpsc-zib/: portfile.cmake  vcpkg.json
include/: CMakeLists.txt
include/mpsc/: mpsc_channel.hpp
tests/: CMakeLists.txt  tests.cpp
